Add filter by CRU management area id.
Change tasks GET to filter by CRU management area id as well as AP area id, (until the front end is switched over to use the CRU management area id at which point AP area can be removed).
